jenkinsci/springboot-jenkins-kubernetes-poc/green-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-green
spec:
  selector:
    matchLabels:
      app: springboot-green
      tier: backend
  replicas: 3
  template:
    metadata:
      labels:
        app: springboot-green
        tier: backend
        version: green
    spec:
      containers:
        - name: springboot-container
          image: jaisoft/springboot:latest
          imagePullPolicy: Always
          imagePullSecrets:
            - name: docker-secret
          ports:
            - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: service-green
  labels:
    app: springboot-green
    version: green
spec:
  selector:
    app: springboot-green
    tier: backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30001
  type: NodePort
