jenkinsci/springboot-jenkins-kubernetes-poc/ingress-ocu-green.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ocu-green
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: service-green
      port:
        number: 80
  rules:
    - host: ocu.springboot.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-green
                port:
                  number: 80
